@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2019-05-02
+ * Pass thru unlogged methods to CHI.
+
 2019-04-28
  * Use per-process cache object.
 
